@@ -7,8 +7,8 @@ namespace Cinemachine
 {
     /// <summary>
     /// This is a virtual camera "manager" that owns and manages a collection
-    /// of child Virtual Cameras.  When the camera goes live, these child vcams 
-    /// are enabled, one after another, holding each camera for a designated time.  
+    /// of child Virtual Cameras.  When the camera goes live, these child vcams
+    /// are enabled, one after another, holding each camera for a designated time.
     /// Blends between cameras are specified.
     /// The last camera is held indefinitely.
     /// </summary>
@@ -56,27 +56,27 @@ namespace Cinemachine
             public CinemachineBlendDefinition m_Blend;
         };
 
-        /// <summary>The set of instructions associating virtual cameras with states.  
+        /// <summary>The set of instructions associating virtual cameras with states.
         /// The set of instructions for enabling child cameras</summary>
         [Tooltip("The set of instructions for enabling child cameras.")]
         public Instruction[] m_Instructions;
 
         /// <summary>Gets a brief debug description of this virtual camera, for use when displayiong debug info</summary>
-        public override string Description 
-        { 
-            get 
-            { 
+        public override string Description
+        {
+            get
+            {
                 // Show the active camera and blend
-                if (mActiveBlend != null) 
+                if (mActiveBlend != null)
                     return mActiveBlend.Description;
 
                 ICinemachineCamera vcam = LiveChild;
-                if (vcam == null) 
+                if (vcam == null)
                     return "(none)";
                 var sb = CinemachineDebug.SBFromPool();
                 sb.Append("["); sb.Append(vcam.Name); sb.Append("]");
-                string text = sb.ToString(); 
-                CinemachineDebug.ReturnToPool(sb); 
+                string text = sb.ToString();
+                CinemachineDebug.ReturnToPool(sb);
                 return text;
             }
         }
@@ -88,10 +88,9 @@ namespace Cinemachine
         /// <summary>Check whether the vcam a live child of this camera.</summary>
         /// <param name="vcam">The Virtual Camera to check</param>
         /// <returns>True if the vcam is currently actively influencing the state of this vcam</returns>
-        public override bool IsLiveChild(ICinemachineCamera vcam) 
-        { 
-            return vcam == LiveChild 
-                || (mActiveBlend != null && (vcam == mActiveBlend.CamA || vcam == mActiveBlend.CamB));
+        public override bool IsLiveChild(ICinemachineCamera vcam)
+        {
+            return vcam == LiveChild || (mActiveBlend != null && mActiveBlend.Uses(vcam));
         }
 
         /// <summary>The State of the current live child</summary>
@@ -114,7 +113,7 @@ namespace Cinemachine
         }
 
         /// <summary>This is called to notify the vcam that a target got warped,
-        /// so that the vcam can update its internal state to make the camera 
+        /// so that the vcam can update its internal state to make the camera
         /// also warp seamlessy.</summary>
         /// <param name="target">The object that was warped</param>
         /// <param name="positionDelta">The amount the target's position changed</param>
@@ -131,7 +130,7 @@ namespace Cinemachine
         /// <param name="worldUp">Default world Up, set by the CinemachineBrain</param>
         /// <param name="deltaTime">Delta time for time-based effects (ignore if less than or equal to 0)</param>
         public override void OnTransitionFromCamera(
-            ICinemachineCamera fromCam, Vector3 worldUp, float deltaTime) 
+            ICinemachineCamera fromCam, Vector3 worldUp, float deltaTime)
         {
             base.OnTransitionFromCamera(fromCam, worldUp, deltaTime);
             mActivationTime = Time.time;
@@ -185,7 +184,7 @@ namespace Cinemachine
                         // Create a blend (will be null if a cut)
                         mActiveBlend = CreateBlend(
                                 previousCam, LiveChild,
-                                m_Instructions[mCurrentInstruction].m_Blend, 
+                                m_Instructions[mCurrentInstruction].m_Blend,
                                 mActiveBlend);
 
                         // If cutting, generate a camera cut event if live
@@ -252,7 +251,7 @@ namespace Cinemachine
             {
                 var sb = CinemachineDebug.SBFromPool();
                 sb.Append(Name); sb.Append(": "); sb.Append(Description);
-                string text = sb.ToString(); 
+                string text = sb.ToString();
                 Rect r = CinemachineDebug.GetScreenPos(this, text, GUI.skin.box);
                 GUI.Label(r, text, GUI.skin.box);
                 CinemachineDebug.ReturnToPool(sb);
@@ -306,7 +305,7 @@ namespace Cinemachine
 
         private void AdvanceCurrentInstruction()
         {
-            if (m_ChildCameras == null || m_ChildCameras.Length == 0 
+            if (m_ChildCameras == null || m_ChildCameras.Length == 0
                 || mActivationTime < 0 || m_Instructions.Length == 0)
             {
                 mActivationTime = -1;
@@ -317,7 +316,7 @@ namespace Cinemachine
             {
                 mCurrentInstruction = m_Instructions.Length - 1;
             }
-            else 
+            else
             {
                 float now = Time.time;
                 if (mCurrentInstruction < 0)
